# vision

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: base.yml  featureA.yml  featureA_phoxi.yml  featureB.yml  main.yml
Dockerfile/: ros_basler.Dockerfile  ros_build.Dockerfile  ros_build_phoxi.Dockerfile  ros_deploy.Dockerfile  ros_deploy_contain_galaxy.Dockerfile  ros_featureA_deploy.Dockerfile  ros_featureA_test.Dockerfile  ros_featureA_test_phoxi.Dockerfile  ros_featureB_deploy.Dockerfile  ros_galaxy.Dockerfile  ros_opencv.Dockerfile  ros_pcl.Dockerfile  ros_ros1_bridge.Dockerfile  ros_test.Dockerfile  ros_test_contain_basler.Dockerfile  ros_test_contain_galaxy.Dockerfile
config/: config_admin.json  config_base.json
log/: latest_build
script/: build_single_package.sh  run_ros2.sh
src/: .editorconfig  template.cpp
src/architecture_measurement/: CMakeLists.txt  package.xml
src/architecture_measurement/config/: cloud_header_params.yaml  cloud_pretreatment_params.yaml  cloud_pretreatment_params_ex.yaml  floor_height_params.yaml  internal_and_external_angle_params.yaml  levelness_params.yaml  masonry_perpendicularity_params.yaml  masonry_surface_flatness_params.yaml  opening_size_params.yaml  perpendicularity_and_levelness_params.yaml  perpendicularity_params.yaml  pillar_section_size_params.yaml  surface_flatness_params.yaml
src/architecture_measurement/include/architecture_measurement/: floor_height.hpp  floor_height_v1.hpp  floor_height_v2.hpp  internal_and_external_angle.hpp  levelness.hpp  masonry.hpp  masonry_perpendicularity.hpp  masonry_perpendicularity_node.hpp  masonry_surface_flatness.hpp  masonry_surface_flatness_node.hpp  opening_size.hpp  perpendicularity.hpp  pillar_section_size.hpp  surface_flatness.hpp
src/architecture_measurement/include/architecture_measurement/impl/: cloud_header.hpp  cloud_header_ex.hpp  cloud_pretreatment.hpp  cloud_pretreatment_ex.hpp  file_io.hpp  fundamental.hpp  inclinometer.hpp  point_cloud_gui.hpp  space_analytic_geometry.hpp  space_analytic_geometry_ex.hpp  types.hpp  types_ex.hpp
src/architecture_measurement/include/architecture_measurement/opening_size/: CloudHeader.h  DoorRegistrate.h  DoorWindowMeasure.h  ExtractOverlappingRegion.h  FSMeasure.h  FSMeasureImpl.h  Global.h  ParamsConfig.h  Perpendicularity.h  SpaceAnalyticGeometry.h  Utils.h
src/architecture_measurement/launch/: architecture_measurement.launch.py  floor_height.launch.py  internal_and_external_angle.launch.py  levelness.launch.py  perpendicularity.launch.py  perpendicularity_and_levelness.launch.py  pillar_section_size.launch.py  surface_flatness.launch.py
src/architecture_measurement/src/: floor_height.cpp  floor_height_v1.cpp  floor_height_v2.cpp  internal_and_external_angle.cpp  levelness.cpp  masonry.cpp  masonry_perpendicularity.cpp  masonry_perpendicularity_node.cpp  masonry_surface_flatness.cpp  masonry_surface_flatness_node.cpp  opening_size.cpp  perpendicularity.cpp  pillar_section_size.cpp  surface_flatness.cpp
src/architecture_measurement/src/impl/: cloud_header.cpp  cloud_header_ex.cpp  cloud_pretreatment.cpp  cloud_pretreatment_ex.cpp  file_io.cpp  fundamental.cpp  inclinometer.cpp  point_cloud_gui.cpp  space_analytic_geometry.cpp  types.cpp
src/aux_box_client/: CMakeLists.txt  package.xml  readme.md
src/camera_basler/: CMakeLists copy.txt.bak  CMakeLists.txt  camera_basler.cpp.bak  package.xml
src/camera_basler/cmake/: FindPYLON.cmake
src/camera_basler/config/: params.yaml
src/camera_basler/gpio_raspberry/include/gpio_raspberry/: gpio_raspberry.hpp
src/camera_basler/gpio_raspberry/src/: gpio_raspberry.cpp
src/camera_basler/include/camera_basler/: camera_basler.hpp
src/camera_basler/laser_line_center/launch/: laser_line_center_pipeline.launch.py
src/camera_basler/laser_line_center/src/: laser_line_center.cpp
src/camera_basler/launch/: camera_basler.launch.py  camera_basler_pipeline.launch.py
src/camera_basler/src/: camera_basler.cpp  camera_basler.cpp.bak  camera_basler_1.0.cpp
src/camera_galaxy/: CMakeLists.txt
src/camera_spinnaker/: CMakeLists.txt  package.xml
src/condition_monitoring/: CMakeLists.txt  package.xml
src/defect_detection/: package.xml  setup.py
src/embedded_parts_identification/: package.xml  setup.cfg  setup.py
src/function/: CMakeLists.txt  package.xml
src/gpio_raspberry/: CMakeLists.txt
src/hz_sensor/: CMakeLists.txt  package.xml
src/image_file_reader/: CMakeLists.txt  package.xml
src/image_file_writer/: CMakeLists.txt  package.xml
src/laser_line_center/: CMakeLists.txt
src/laser_line_reconstruct/: CMakeLists.txt
src/modbus_ros/: CMakeLists.txt  package.xml
src/modbus_ros/cmake/: FindMODBUS.cmake
src/modbus_ros/config/: params.yaml
src/modbus_ros/include/modbus_ros/: modbus_ros.hpp
src/modbus_ros/launch/: modbus_ros.launch.py
src/modbus_ros/src/: modbus_ros.cpp
src/mortar_joint/: package.xml  setup.cfg  setup.py
src/motor_encoder/: CMakeLists.txt  package.xml
src/mqtt_ros/: CMakeLists.txt
src/mqtt_ros/config/: mqtt_ros_params.yaml  params.yaml
src/mqtt_ros/include/mqtt_ros/: mqtt_ros.hpp
src/mqtt_ros/launch/: mqtt_ros.launch.py
src/mqtt_ros/src/: mqtt_ros.cpp
src/phoxi_control/: CMakeLists.txt  package.xml
src/phoxi_control/config/: phoxi_control_param.yaml.bak  phoxi_control_params.yaml
src/phoxi_control/include/phoxi_control/: phoxi_control.hpp
src/phoxi_control/launch/: phoxi_control.launch.py
src/phoxi_control/src/: phoxi_control.cpp
src/pipeline/: package.xml
src/pipeline/launch/: pipeline.basler.launch.py  pipeline.launch.py  pipeline.launch_basler.py  pipeline.launch_galaxy.py
src/pipeline_hc/: CMakeLists.txt  package.xml
src/point_cloud_analyse/: CMakeLists.txt
src/point_cloud_collect/: CMakeLists.txt
src/seam_tracking/: CMakeLists.txt  package.xml
src/seam_tracking/config/: params.yaml
src/seam_tracking/include/seam_tracking/: seam_tracking.hpp
src/seam_tracking/launch/: seam_tracking.launch.py
src/seam_tracking/src/: seam_tracking.cpp
src/service/: ros2.service  (+16 more)
(+108 files in other folders)
